crates/agent-tui/tests/snapshots/render_snapshots__markdown_code_block.snap
---
source: crates/agent-tui/tests/render_snapshots.rs
expression: "harness::frame(\"markdown_code_block\", &s, W, H)"
---
› Montre-moi le token d'annulation

● Voici la primitive :


    pub fn cancel(&self) {
        self.tx.send_replace(true);
    }


  Elle est idempotente.









────────────────────────────────────────────────────────────────────────────────
› Ask Pyxis to do anything
────────────────────────────────────────────────────────────────────────────────
  gpt-5 · pyxis
