crates/agent-tui/tests/snapshots/render_snapshots__parity_surface_conversation.snap
---
source: crates/agent-tui/tests/render_snapshots.rs
expression: "harness::frame_parity(\"parity_surface_conversation\", &s, &surface, W, H)"
---















› Quelle est la frontière d'arrêt ?


● La fin d'événement de stream et le retour de dispatch.

────────────────────────────────────────────────────────────────────────────────
›
────────────────────────────────────────────────────────────────────────────────
gpt-5 · pyxis · Ask for approval           ctrl+j newline · ctrl+c twice to quit
