crates/agent-tui/tests/snapshots/render_snapshots__parity_surface_pending_input.snap
---
source: crates/agent-tui/tests/render_snapshots.rs
expression: "harness::frame_parity(\"parity_surface_pending_input\", &s, &surface, W, H)"
---









› Récapitule


› gpt-5.6-sol          [openai-codex]
  gpt-5.6-terra        [openai-codex]
  gpt-5.6-luna         [openai-codex]
  gpt-5.5              [openai-codex]
  gpt-5.4              [openai-codex]
  gpt-5.4-mini         [openai-codex]
  gpt-5.3-codex-spark  [openai-codex]
  ↑↓ navigate · enter run · tab complete · esc cancel
────────────────────────────────────────────────────────────────────────────────
› /models
────────────────────────────────────────────────────────────────────────────────
gpt-5 · pyxis · Ask for approval           ctrl+j newline · ctrl+c twice to quit
