crates/agent-tui/tests/snapshots/render_snapshots__resize_narrow.snap
---
source: crates/agent-tui/tests/render_snapshots.rs
expression: "harness::frame(\"resize_narrow\", &s, NARROW, H)"
---
› Explique la boucle d'agent et montre
  le code

● La boucle est un Stream d'AgentEvent.


  Elle rend la main à chaque frontière.













────────────────────────────────────────
› Un prompt qui dépasse largement la lar
────────────────────────────────────────
gpt-5 · pyxis · As  ctrl+c twice to quit
