crates/agent-tui/tests/snapshots/render_snapshots__resize_wide.snap
---
source: crates/agent-tui/tests/render_snapshots.rs
expression: "harness::frame(\"resize_wide\", &s, WIDE, H)"
---
› Explique la boucle d'agent et montre le code

● La boucle est un Stream d'AgentEvent.


  Elle rend la main à chaque frontière.














────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
› Un prompt qui dépasse largement la largeur du terminal étroit
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
gpt-5 · pyxis · Ask for approval                                                                                                                                                    ctrl+c twice to quit
